fixing spacing and font format

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -15,7 +15,7 @@ body {
 h1,
 legend {
     color: rgb(45, 57, 69);
-    font-weight: 250;
+    font-style: bold;
     font-size: 24px;
     margin: 25px, 0, 25px, 0;
 }
@@ -68,11 +68,6 @@ hr,
     text-align: center;
 }
 
-.format,
-.topics {
-    text-align: left;
-    color: grey;
-}
 
 /*---Form Styles---*/
 form,
@@ -101,6 +96,7 @@ select {
 input[placeholder=required] {
     text-align: right;
     font-size: 14px;
+    font-style: italic;
 }
 
 input,
@@ -117,7 +113,10 @@ textarea:focus {
   background: whitesmoke;
 }
 
-
+.radio,
+.checkbox {
+    display: inline-block;
+}
 
 textarea {
     width: 370px;
